Add custom app icon, WeatherActivity UI

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -6,4 +6,5 @@
     <string name="loading_first_message">Nous téléchargeons les données…</string>
     <string name="loading_second_message">C’est presque fini…</string>
     <string name="loading_third_message">Plus que quelques secondes avant d’avoir le résultat…</string>
+    <string name="restart">Redémarrer</string>
 </resources>
